--- a/SugarOrangeCompiler/build.gradle
+++ b/SugarOrangeCompiler/build.gradle
@@ -1,9 +1,12 @@
+import org.gradle.internal.jvm.Jvm
+
 apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.google.auto:auto-common:0.10'
     api 'com.squareup:javapoet:1.11.1'
-    compileOnly 'com.google.auto.service:auto-service:1.0-rc3'
+    implementation 'com.google.auto.service:auto-service:1.0-rc3'
     implementation project(':SugarOrangeAnnotation')
 }
 
