--- a/SugarOrangeAnnotation/build.gradle
+++ b/SugarOrangeAnnotation/build.gradle
@@ -6,3 +6,4 @@ dependencies {
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
+apply from: "bintrayUpload.gradle"
