--- a/SugarOrangeCompiler/build.gradle
+++ b/SugarOrangeCompiler/build.gradle
@@ -1,5 +1,3 @@
-import org.gradle.internal.jvm.Jvm
-
 apply plugin: 'java-library'
 
 dependencies {
@@ -7,7 +5,7 @@ dependencies {
     api 'com.google.auto:auto-common:0.10'
     api 'com.squareup:javapoet:1.11.1'
     implementation 'com.google.auto.service:auto-service:1.0-rc3'
-    implementation project(':SugarOrangeAnnotation')
+    implementation 'com.qgswsg:SugarOrange-annotation:v1.0'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
